align navbar top left with position fixed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,7 @@
   display: inline;
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
 }
 
@@ -29,8 +30,8 @@
   float: left;
   display: block;
   color: white;
-  margin: 5;
-  padding: 5;
+  margin: 2;
+  padding: 2;
   text-align: center;
   padding: 14px 16px;
 }
